# woby

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  vcpkg.json
.github/workflows/: build-and-release.yml
cmake/: BgfxShaders.cmake  WobyWarnings.cmake
cmake/vcpkg-triplets/: woby-x64-linux-dynamic.cmake
doc/: AI decisions.md  plugin_architecture.md  todo.md
shaders/: color.frag.sc  color.vert.sc  imgui.frag.sc  imgui.vert.sc  mesh.frag.sc  mesh.vert.sc  point_sprite.frag.sc  point_sprite.vert.sc  varying.def.sc
src/: background_load.cpp  background_load.h  bgfx_helpers.cpp  bgfx_helpers.h  camera.cpp  camera.h  camera_sdl.cpp  command_line.cpp  command_line.h  file_discovery.cpp  file_discovery.h  hash_utils.cpp  hash_utils.h  hover_pick.cpp  hover_pick.h  imgui_bgfx.cpp  imgui_bgfx.h  main.cpp  model_load.cpp  model_load.h  model_mesh.cpp  model_mesh.h  native_dialogs.cpp  native_dialogs.h  obj_mesh.cpp  obj_mesh.h  performance_log.cpp  performance_log.h  scene_file.cpp  scene_file.h  scene_renderer.cpp  scene_renderer.h  scene_screenshot.cpp  scene_screenshot.h  scene_up_axis.h  stl_mesh.cpp  stl_mesh.h  ui_operations.cpp  ui_operations.h  ui_state.cpp  (+1 more)
tests/: background_load_tests.cpp  command_line_tests.cpp  dummy_tests.cpp  file_discovery_tests.cpp  hover_pick_tests.cpp  model_mesh_tests.cpp  obj_mesh_tests.cpp  scene_file_edge_tests.cpp  stl_mesh_tests.cpp  ui_operations_tests.cpp
